--- a/src/assets/styles/components/CarouselItem.scss
+++ b/src/assets/styles/components/CarouselItem.scss
@@ -1,5 +1,5 @@
 .carousel-item {
-	@extend .c-3;
+	flex: 0 0 calc(25% - $size-10px);
 	border-radius: $size-border-radius;
 	overflow: hidden;
 	position: relative;
