--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -7,7 +7,8 @@
 @import "./components/CarouselItem.scss";
 
 body {
-	background-image: $background-image;
+	background: $background-color;
+	background: $background-gradient;
 }
 
 h1, h2, h3 {
