--- a/src/assets/styles/Vars.scss
+++ b/src/assets/styles/Vars.scss
@@ -1,54 +1,26 @@
 // Colors
-$background-color: #FF3CAC;
+$background-main-color: #FF3CAC;
+$background-second-color: #784BA0;
+$background-third-color:#2B86C5;
+
 $background-gradient: linear-gradient(
 225deg,
-#FF3CAC 0%,
-#784BA0 50%,
-#2B86C5 100%
+$background-main-color 0%,
+$background-second-color 50%,
+$background-third-color 100%
 );
-
-/*
-$background-color: rgb(0,168,255);
-$background-gradient: linear-gradient(
-180deg,
-rgba(0,168,255,1) 10%,
-rgba(114,226,255,1) 50%,
-rgba(144,232,254,1) 85%,
-rgba(250,252,252,1) 100%
-);
- */
 
 $color-black: black;
+$color-black-transparent: rgba(0,0,0,0.2);
 $color-white: white;
 $color-white-transparent: rgba(255,255,255,0.1);
 
 // Size
 $size-regular: 5rem * .625;
+$size-100px: 10rem * .625;
 $size-10px: 1rem * .625;
 $size-border-radius: 2rem * .625;
 
 // media
 $breakpoint-tablet: 768px;
-@media only screen and (min-width: $breakpoint-tablet) {
-	.c-3 {
-		flex: 0 0 calc( 25% - $size-10px);
-	}
-	.c-4 {
-		flex: 0 0 calc( 33.3% - $size-10px  );
-	}
-	.c-6 {
-		flex: 0 0 calc( 50% - $size-10px  );
-	}
-	.c-8 {
-		flex: 0 0 calc( 66.6% - $size-10px  );
-	}
-	.c-9 {
-		flex: 0 0 calc( 75% - $size-10px  );
-	}
-	.c-10 {
-		flex: 0 0 calc( 83.3% - $size-10px  );
-	}
-	.c-12 {
-		flex: 0 0 100%;
-	}
-}
+
