--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -1,6 +1,7 @@
 .header {
 	@extend .d-flex, .justify-content-between, .align-items-center;
 	color: $color-white;
+	height: $size-100px;
 	margin-top: $size-regular / 2;
 	margin-bottom: $size-regular / 5;
 
