--- a/src/assets/styles/components/home/CarouselItem.scss
+++ b/src/assets/styles/components/home/CarouselItem.scss
@@ -1,5 +1,5 @@
 .carousel-item {
-	flex: 0 0 calc(25% - $size-10px);
+	flex: 0 0 ($size-regular * 4);
 	border-radius: $size-border-radius;
 	overflow: hidden;
 	position: relative;
@@ -13,7 +13,7 @@
 	transform-origin: center left;
 
 	&__img {
-		width: $size-regular * 4;
+		max-width: 100%;
 		height: $size-regular * 5;
 		-o-object-fit: cover;
 		object-fit: cover;
