[UPDATE] register, [ADD] scss utils

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -13,6 +13,7 @@
 @import "./components/login/LoginSocialMedia.scss";
 
 @import "./components/register/RegisterContainer.scss";
+@import "./components/register/RegisterForm.scss";
 
 body {
 	background: $background-main-color;
