--- a/src/assets/styles/Vars.scss
+++ b/src/assets/styles/Vars.scss
@@ -24,3 +24,56 @@ $size-border-radius: 2rem * .625;
 // media
 $breakpoint-tablet: 768px;
 
+//-------- Form -----------//
+
+// Form Container
+.form-container {
+	@extend .d-flex, .flex-column, .justify-content-around;
+	background-color: $color-black-transparent;
+	border: 2px solid $color-white;
+	border-radius: $size-border-radius * 2;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	color: $color-white;
+	height: $size-100px * 7;
+	max-width: $breakpoint-tablet;
+	padding: 60px 68px 40px;
+}
+
+.form-input {
+	background-color: transparent;
+	border-bottom: 2px solid $color-white;
+	border-left: 0;
+	border-right: 0;
+	border-top: 0;
+	color: $color-white;
+	font-size: 16px;
+	height: $size-regular;
+	margin-bottom: 20px;
+	outline: none;
+	padding: 0px 20px;
+
+}
+
+.form-button {
+	background-color: rgba(255, 255, 255, 0.3);
+	border: none;
+	border-radius: $size-border-radius;
+	color: $color-white;
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: bold;
+	height: $size-regular;
+	letter-spacing: 1px;
+	margin: $size-10px 0;
+
+	-webkit-transition: background-color 450ms ease-out;
+	-moz-transition: background-color 450ms ease-out;
+	-o-transition: background-color 450ms ease-out;
+	transition: background-color 450ms ease-out;
+
+}
+
+.form-button:hover {
+	background-color: $background-main-color;
+}
+
