--- a/src/assets/styles/components/login/LoginForm.scss
+++ b/src/assets/styles/components/login/LoginForm.scss
@@ -22,41 +22,11 @@
 	}
 
 	&--input {
-		background-color: transparent;
-		border-bottom: 2px solid $color-white;
-		border-left: 0;
-		border-right: 0;
-		border-top: 0;
-		color: $color-white;
-		font-size: 16px;
-		height: $size-regular;
-		margin-bottom: 20px;
-		outline: none;
-		padding: 0px 20px;
-
+		@extend .form-input;
 	}
 
 	&--button {
-		background-color: rgba(255, 255, 255, 0.3);
-		border: none;
-		border-radius: $size-border-radius;
-		color: $color-white;
-		cursor: pointer;
-		font-size: 16px;
-		font-weight: bold;
-		height: $size-regular;
-		letter-spacing: 1px;
-		margin: $size-10px 0;
-
-		-webkit-transition: background-color 450ms ease-out;
-		-moz-transition: background-color 450ms ease-out;
-		-o-transition: background-color 450ms ease-out;
-		transition: background-color 450ms ease-out;
-
-	}
-
-	&--button:hover {
-		background-color: $background-main-color;
+		@extend .form-button;
 	}
 }
 
