[ADD] react router

--- a/src/assets/styles/Vars.scss
+++ b/src/assets/styles/Vars.scss
@@ -34,7 +34,7 @@ $breakpoint-tablet: 768px;
 	border-radius: $size-border-radius * 2;
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	color: $color-white;
-	height: $size-100px * 7;
+	height: 85vh;
 	max-width: $breakpoint-tablet;
 	padding: 60px 68px 40px;
 }
