--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -15,6 +15,8 @@
 @import "./components/register/RegisterContainer.scss";
 @import "./components/register/RegisterForm.scss";
 
+@import "./components/not-found/NotFound.scss";
+
 body {
 	background: $background-main-color;
 	background: $background-gradient;
