--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -2,14 +2,20 @@
 	@extend .d-flex, .justify-content-between, .align-items-center;
 	color: $color-white;
 	height: $size-100px;
-	margin-top: $size-regular / 2;
 	margin-bottom: $size-regular / 5;
 
 	&__logo {
-		font-weight: 400;
-		span {
-			font-weight: 700;
+		&--title {
+			color: $color-white;
+			font-size: $size-regular;
+			font-weight: 400;
+			span {
+				font-weight: 700;
+			}
 		}
+	}
+	&__logo:hover {
+		text-decoration: none;
 	}
 
 	&__menu {
