[ADD] Player container

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -16,6 +16,7 @@
 @import "./components/register/RegisterForm.scss";
 
 @import "./components/not-found/NotFound.scss";
+@import "./components/Player.scss";
 
 body {
 	background: $background-main-color;
